--- a/Diseño Web/HTML/TALLER 1/CSS/galeriaStyleSheet.css
+++ b/Diseño Web/HTML/TALLER 1/CSS/galeriaStyleSheet.css
@@ -13,18 +13,24 @@ body{
     height: auto; /* Altura deseada */
     text-align: left;
 }
-.gallery{
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+}
+.gallery {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 10px;
     padding: 20px;
 }
-.gallery-img{
+.gallery.img {
     width: 100%;
     height: auto;
     border: 1px solid #ccc;
 }
-.gallery-img:hover{
-    transform: scale(1.1);
+.gallery.img.hover{
+    transform: scale(1,1);
     transition: transform 0.3s ease-in-out;
 }
